tooling/nargo_cli/tests/snapshots/execution_success/struct_array_inputs/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "foos",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "struct",
            "path": "Foo",
            "fields": [
              {
                "name": "bar",
                "type": {
                  "kind": "field"
                }
              },
              {
                "name": "baz",
                "type": {
                  "kind": "field"
                }
              }
            ]
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QSwqAMAxE/Z8naRKb7LyKxXr/I2ixQqlL+yAMZIZZTN89LPf13Zcx65aVYGWO3kUk3MFZUAGWsCoqisrhlCgqq7dgHgyZIp5idMLD1LBrLrrgH7i064K041Ts+pL+Q940+XPl1fmXC4qNvN+kAQAA",
  "debug_symbols": "nZDRCoMwDEX/pc8+2MHG9FfGkFijFEJbYisM8d8XRZ0bDMaekpubcwMZVYN16irrWt+r8jaqmi2R7SryBqL1TqbjlKlNVpERZaQOvlABGF1UpUtEmRqA0rLUB3BLjcDi5plC10iVwNYSzt2Uvej8O1rolS2uO3z+mdb5ecW1Pv3B79e1vrzhd1FgLH++awC2UBOusk3OHNz4CJuzvTuwN9gkxjlp8ST7CQ==",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
